{
    "name": "KeyboardInput",
    "maps": [
        {
            "name": "Rooms",
            "id": "2929089d-6a56-4ded-a009-5f29e52da296",
            "actions": [
                {
                    "name": "Camera1",
                    "type": "Button",
                    "id": "f471d039-87a4-4160-8b91-2f66519ceee1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera2",
                    "type": "Button",
                    "id": "e7591fd6-b986-41e0-a015-df84cc30bf66",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera3",
                    "type": "Button",
                    "id": "f0377e73-77c7-465e-b264-1601eec32e91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera4",
                    "type": "Button",
                    "id": "2fb03029-8da7-420f-ab20-acebeda39872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera5",
                    "type": "Button",
                    "id": "99623db1-0d4d-4215-8a45-c5e938588b3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "702105b0-65f3-4d3e-ba79-6130a07082e0",
                    "path": "<Keyboard>/#(1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3efeba0-3ab0-4cf2-aa00-07f724e7651b",
                    "path": "<Keyboard>/#(2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c7049c2-ef16-4926-9cc2-237e8d303f9b",
                    "path": "<Keyboard>/#(3)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0841871c-d1eb-4d73-9787-a152d98cd29f",
                    "path": "<Keyboard>/#(4)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c59fd3fe-ccdc-450f-adff-71c4b1611568",
                    "path": "<Keyboard>/#(5)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera5",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}